feat: Implement UI enhancements and localization
This commit introduces several user-facing improvements including achievement details, fullscreen image viewing, and expanded localization. It also resolves native Android build issues and fixes bugs related to displaying workout information.

### New Features

1.  **Achievement Details Dialog:**
    -   Achievements on the profile screen are now tappable, showing a dialog with a localized name, description, and emblem.
    -   Created `achievement_details_dialog.dart` to display this information.

2.  **Fullscreen Image Viewer:**
    -   User avatars and media in posts are now tappable, opening a new fullscreen view with zoom and pan capabilities.
    -   Created `fullscreen_image_viewer.dart` for this reusable functionality.

3.  **Avatar Cropping:**
    -   Integrated the `image_cropper` package to allow users to crop their avatar to a square/circle after picking it from the gallery, ensuring a consistent look.

### UI and UX Improvements

-   **Dashboard:** The streak counter on the dashboard now only displays the number, removing the redundant "DAY" text for a cleaner look.
-   **Exercise Display:**
    -   The `CurrentSetDisplay` during an active workout now correctly shows the primary and secondary muscle groups for the current exercise instead of a placeholder.
    -   The exercise list in the `ExerciseExplorer` now also displays secondary muscle groups, providing more context to the user at a glance.

### Localization

-   **Achievements:** Refactored the `Achievement` entity to pull names and descriptions from `.arb` localization files instead of hardcoded strings. Added all relevant keys to `app_en.arb` and `app_uk.arb`.
-   **Workout UI:** Localized all user-facing text in the `CurrentSetDisplay` widget, including labels and dialog text.
-   **Technical Placeholders:** Added localized strings for technical states, such as when muscle group data is loading.

### Bug Fixes & Refactoring

-   **Dependency Res

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1806,7 +1806,7 @@
   },
   "postCardRecordClaimTitle": "RECORD CLAIM",
   "@postCardRecordClaimTitle": {
-    "description": "Title overlay for a record claim post card"
+    "description": "Title for a record claim post card"
   },
   "postCardRecordExerciseNameFallback": "EXERCISE RECORD",
   "@postCardRecordExerciseNameFallback": {
@@ -1831,5 +1831,81 @@
   "postCardRecordWeightFallback": "N/A",
   "@postCardRecordWeightFallback": {
     "description": "Fallback for weight if not available"
+  },
+  "achievementEarlyBirdName": "EARLY BIRD",
+  "@achievementEarlyBirdName": {},
+  "achievementEarlyBirdDescription": "Welcome to the club! Thanks for joining MuscleUP.",
+  "@achievementEarlyBirdDescription": {},
+  "achievementFirstWorkoutName": "FIRST STEP",
+  "@achievementFirstWorkoutName": {},
+  "achievementFirstWorkoutDescription": "You completed your first workout! Keep it up!",
+  "@achievementFirstWorkoutDescription": {},
+  "achievementConsistentKing10Name": "STREAK STAR (10)",
+  "@achievementConsistentKing10Name": {},
+  "achievementConsistentKing10Description": "10-day workout streak! You are on fire!",
+  "@achievementConsistentKing10Description": {},
+  "achievementConsistentKing30Name": "CONSISTENT KING (30)",
+  "@achievementConsistentKing30Name": {},
+  "achievementConsistentKing30Description": "30-day workout streak! Unstoppable!",
+  "@achievementConsistentKing30Description": {},
+  "achievementVolumeStarterName": "VOLUME STARTER",
+  "@achievementVolumeStarterName": {},
+  "achievementVolumeStarterDescription": "Lifted over 10,000 KG in total volume!",
+  "@achievementVolumeStarterDescription": {},
+  "achievementVolumeProName": "VOLUME PRO",
+  "@achievementVolumeProName": {},
+  "achievementVolumeProDescription": "Lifted over 100,000 KG in total volume! Incredible strength!",
+  "@achievementVolumeProDescription": {},
+  "achievementLevel5ReachedName": "LEVEL 5 REACHED",
+  "@achievementLevel5ReachedName": {},
+  "achievementLevel5ReachedDescription": "Congratulations on reaching level 5!",
+  "@achievementLevel5ReachedDescription": {},
+  "achievementLevel10ReachedName": "LEVEL 10 REACHED",
+  "@achievementLevel10ReachedName": {},
+  "achievementLevel10ReachedDescription": "Wow! Level 10! You're a true MuscleUP enthusiast!",
+  "@achievementLevel10ReachedDescription": {},
+  "achievementPersonalRecordSetName": "NEW RECORD: {detail}!",
+  "@achievementPersonalRecordSetName": {
+    "placeholders": {
+      "detail": {
+        "type": "String"
+      }
+    }
+  },
+  "achievementPersonalRecordSetDescription": "Congratulations on setting a new personal record for {detail}!",
+  "@achievementPersonalRecordSetDescription": {
+    "placeholders": {
+      "detail": {
+        "type": "String"
+      }
+    }
+  },
+  "achievementConditionStreak": "Current best streak: {currentStreak}/{targetStreak} days.",
+  "@achievementConditionStreak": {
+    "placeholders": {
+      "currentStreak": {
+        "type": "int"
+      },
+      "targetStreak": {
+        "type": "int"
+      }
+    }
+  },
+  "achievementConditionVolume": "Requires total volume tracking in profile.",
+  "@achievementConditionVolume": {},
+  "achievementConditionLevel": "Current level: {currentLevel}/{targetLevel}.",
+  "@achievementConditionLevel": {
+    "placeholders": {
+      "currentLevel": {
+        "type": "int"
+      },
+      "targetLevel": {
+        "type": "int"
+      }
+    }
+  },
+  "currentSetDisplayMuscleGroupsLoading": "Loading muscle groups...",
+  "@currentSetDisplayMuscleGroupsLoading": {
+    "description": "Placeholder text for muscle groups while exercise data is loading"
   }
 }
