--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -1559,7 +1559,7 @@
   "@currentSetDisplayButtonPrevSet": {
     "description": "Текст кнопки для переходу до попереднього підходу"
   },
-  "currentSetDisplayButtonFinishWorkout": "ЗАВЕРШИТИ ТРЕНУВАННЯ",
+  "currentSetDisplayButtonFinishWorkout": "ЗАВЕРШИТИ",
   "@currentSetDisplayButtonFinishWorkout": {
     "description": "Текст кнопки для завершення тренування, коли на останньому підході"
   },
@@ -1831,5 +1831,81 @@
   "postCardRecordWeightFallback": "Н/Д",
   "@postCardRecordWeightFallback": {
     "description": "Запасний текст для ваги, якщо недоступна"
+  },
+  "achievementEarlyBirdName": "РАННЯ ПТАШКА",
+  "@achievementEarlyBirdName": {},
+  "achievementEarlyBirdDescription": "Ласкаво просимо до клубу! Дякуємо, що приєдналися до MuscleUP.",
+  "@achievementEarlyBirdDescription": {},
+  "achievementFirstWorkoutName": "ПЕРШИЙ КРОК",
+  "@achievementFirstWorkoutName": {},
+  "achievementFirstWorkoutDescription": "Ви завершили своє перше тренування! Так тримати!",
+  "@achievementFirstWorkoutDescription": {},
+  "achievementConsistentKing10Name": "ЗІРКА СТРІКУ (10)",
+  "@achievementConsistentKing10Name": {},
+  "achievementConsistentKing10Description": "10-денний стрік тренувань! Ви у вогні!",
+  "@achievementConsistentKing10Description": {},
+  "achievementConsistentKing30Name": "КОРОЛЬ ПОСЛІДОВНОСТІ (30)",
+  "@achievementConsistentKing30Name": {},
+  "achievementConsistentKing30Description": "30-денний стрік тренувань! Нестримний!",
+  "@achievementConsistentKing30Description": {},
+  "achievementVolumeStarterName": "СТАРТЕР ОБ'ЄМУ",
+  "@achievementVolumeStarterName": {},
+  "achievementVolumeStarterDescription": "Піднято понад 10 000 кг загального об'єму!",
+  "@achievementVolumeStarterDescription": {},
+  "achievementVolumeProName": "ПРОФІ ОБ'ЄМУ",
+  "@achievementVolumeProName": {},
+  "achievementVolumeProDescription": "Піднято понад 100 000 кг загального об'єму! Неймовірна сила!",
+  "@achievementVolumeProDescription": {},
+  "achievementLevel5ReachedName": "ДОСЯГНУТО 5 РІВЕНЬ",
+  "@achievementLevel5ReachedName": {},
+  "achievementLevel5ReachedDescription": "Вітаємо з досягненням 5-го рівня!",
+  "@achievementLevel5ReachedDescription": {},
+  "achievementLevel10ReachedName": "ДОСЯГНУТО 10 РІВЕНЬ",
+  "@achievementLevel10ReachedName": {},
+  "achievementLevel10ReachedDescription": "Ого! 10-й рівень! Ви справжній ентузіаст MuscleUP!",
+  "@achievementLevel10ReachedDescription": {},
+  "achievementPersonalRecordSetName": "НОВИЙ РЕКОРД: {detail}!",
+  "@achievementPersonalRecordSetName": {
+    "placeholders": {
+      "detail": {
+        "type": "String"
+      }
+    }
+  },
+  "achievementPersonalRecordSetDescription": "Вітаємо зі встановленням нового особистого рекорду в {detail}!",
+  "@achievementPersonalRecordSetDescription": {
+    "placeholders": {
+      "detail": {
+        "type": "String"
+      }
+    }
+  },
+  "achievementConditionStreak": "Поточний найкращий стрік: {currentStreak}/{targetStreak} днів.",
+  "@achievementConditionStreak": {
+    "placeholders": {
+      "currentStreak": {
+        "type": "int"
+      },
+      "targetStreak": {
+        "type": "int"
+      }
+    }
+  },
+  "achievementConditionVolume": "Потрібне відстеження загального об'єму в профілі.",
+  "@achievementConditionVolume": {},
+  "achievementConditionLevel": "Поточний рівень: {currentLevel}/{targetLevel}.",
+  "@achievementConditionLevel": {
+    "placeholders": {
+      "currentLevel": {
+        "type": "int"
+      },
+      "targetLevel": {
+        "type": "int"
+      }
+    }
+  },
+   "currentSetDisplayMuscleGroupsLoading": "Завантаження груп м'язів...",
+  "@currentSetDisplayMuscleGroupsLoading": {
+    "description": "Текст-заповнювач для груп м'язів, поки завантажуються дані про вправу"
   }
 }
